# mcstatus-v2

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
app/: auth.py  config.py  database.py  errors.py  logging.py  models.py  redis.py  schemas.py
app/routes/: admin.py  servers.py
app/services/: history.py  single_flight.py  status.py
docs/: architecture.md  example.py
